# agentic-ai-patterns

./: .gitignore  README.md  index.md  justfile  main.py  pyproject.toml
config/: models.yaml
config/prompts/: common.yaml  parallelization.yaml  routing.yaml
doc/week1/: week1.md
doc/week1/prompt_caching/: prompt_caching.md
doc/week2/: week2.md
payloads/: no_cache.json
src/core/: config.py  logger.py
src/llm/: anthropic_provider.py  factory.py  google_provider.py  openai_provider.py
src/prompts/: loader.py
week1/: week1.md
