[project]
name = "agentic-ai-patterns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=1.21.0",
    "google-cloud-aiplatform>=1.132.0",
    "jinja2>=3.1.6",
    "langchain-anthropic>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.2",
    "langgraph>=1.0.5",
]
